# OTAedge

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  test_api.sh
agent/: Cargo.toml
agent/src/: lib.rs  main.rs  websocket.rs
backend/: .env.example  Cargo.toml  Dockerfile  test_api.sh  ws_test.py  ws_test.rs
backend/.sqlx/: query-0fd1074e583e9d0d9656fe2bf52a22bd560e1cbf10225716b8266f353656fe97.json  query-20f1f1fbd6ad15b20dab45e3111a4410d89e746e67c03bc1c770eb7590a56b8f.json  query-279de9e8764d3256f7bae3863e0e29ee435101a82bde10c99bffe789e44a5e26.json  query-2e36c3ed8aaa956d46576334a70cdb4b1ccb63188e6e5332515563bea4aa1d88.json  query-418356e7091e0642ad69cbaa601301f839aaa526ed21952e2375d7577d123dce.json  query-5e1e55c70d226a7283dd5101568d6e4f05fa24bacab9333cdec5bbb6012b766a.json  query-6a2444deecfcbbeae2306495eec388c19154579442093ef2355a426b49470faa.json  query-76962f514eb5b9a160b03cb45ec77b03f71080d8cffd475df0428c89d3fb1b32.json  query-7a9172c95b15052bb8d64d6e48d6bc0090ec98ae930088b5db38c7ceeecc6e8b.json  query-7e0c9bc161e9c7c986478bb04aca5df0db00d6afc5c1787acfd533072d001670.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8c24952308591b97556e4b430e58db1455014df3a4e2e561433ca82cc3f8d210.json  query-943bd18a3274dce5b862b966c2932a5da865d4297ff69028d7ae6657d259a2fd.json  query-9b3ac8972e9e7eb54db07e6065a8733a1ed4e7892b959a3997112b09b65622bf.json  query-9e77c47f1e3dbc497708e9197cf9650c9e3c08e76f2dcc6d20ca890fe15bd01a.json  query-a8f2397d8d6b2c2ad756f0c5bafafed29ff3239bdb607fe9ce0f2bc78b9821d7.json  query-ac8c82063bc9bc3de495c36e577f6ac8442b30cad313659d3b7bcdf5454ad41a.json  query-b0d2abd40affcd3b460e637ab2f968a81dd35cf4a2dae3d935f0b368eae08e7e.json  query-b1ab6e07d6c3ffcdc1464566b16e9b9def48e6dcb07dbe38ee2a21dae7451eb2.json  query-b2797dec5bc995049b0988bdefbdf5ec29b1946a147842994f811c9fc14ff0c9.json  query-b492ef4fcbbcf18973d278ccc0f3344e087d455635feb234a49bc33744664188.json  query-b5af1f0028bc21edd5d0a132bac91c19d76a3161f3f95b96d9b07a8fea787966.json  (+14 more)
backend/migrations/: 001_initial.sql  (+1 more)
(+38 files in other folders)
