[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.22", features = ["rustls"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
futures-util = "0.3"
ort = "2.0.0-rc.12"
ndarray = "0.15"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3"
