[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "ipnetwork"] }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "9"
bcrypt = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs", "request-id"] }
sha2 = "0.10"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-axum = "0.1"
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = "0.13"
dotenv = "0.15"
futures = "0.3"
tokio-tungstenite = { version = "0.29.0", features = ["rustls"] }
prometheus = { version = "0.13", features = ["process"] }
thiserror = "1.0"
lazy_static = "1.4"
regex = "1"
aws-config = "1"
aws-sdk-s3 = "1"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
redis = { version = "0.23", features = ["tokio-comp"] }
deadpool-redis = "0.23"
bincode = { version = "2", features = ["serde"] }
bytes = "0.6"

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["postgres"] }
flamegraph = "0.6"
